...

@Composable
private fun PaperCard(paper: Paper) {
    Card(
        modifier = Modifier
            .fillMaxWidth()
            .testTag("paperCard")
    ) {
        Row(modifier = Modifier.padding(16.dp)) {
            Box(
                modifier = Modifier
                    .size(10.dp)
                    .clip(CircleShape)
...
